--- a/gui/listas/listaProcesador.ui
+++ b/gui/listas/listaProcesador.ui
@@ -70,7 +70,7 @@ background-color: #F8F7F6
        </spacer>
       </item>
       <item row="0" column="7">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="btn_buscar_bet">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
